--- a/css/banner2.css
+++ b/css/banner2.css
@@ -20,7 +20,6 @@
 	margin-right: 10px;
 	margin-left: 0px;
 	padding: 0px;
-	position: relative;
 }
 
 .ban-left ul{
@@ -38,23 +37,17 @@
 	color: #636363;
 }
 
-.ban-left .menu>li:hover{
+.ban-left ul li:hover{
 	background: #D9D9D9;
 }
 
-.ban-left .menu>li{
+.ban-left ul li{
 	height: 27px;
 	line-height: 27px;
 	font-size: 0;
 	color: #626262;
 	padding-left: 18px;
-	/*position: relative;*/
-}
-
-.ban-left ul li .menu-more ul, .ban-left ul li .menu-more li{
-	list-style: none;
-	margin: 0;
-	padding: 0;
+	position: relative;
 }
 
 .ban-left ul li:hover .menu-more{
@@ -62,15 +55,14 @@
 }
 
 .ban-left ul li .menu-more{
-	position: absolute;
 	display: none;
+	position: absolute;
 	left: 192px;
-	top: 0px;
+	top: 0;
 	z-index: 10;
 	width: 1000px;
 	height: 480px;
 	background: #fff;
-	box-shadow: 2px 0 5px rgba(0, 0, 0, .3);
 	overflow: hidden;
 }
 
@@ -79,7 +71,7 @@
 	height: 24px;
 	margin-top: 20px;
 	margin-left: 20px;
-	float: left;
+	padding: 0;
 	/*background: green;*/
 }
 
@@ -93,49 +85,37 @@
 	color: #fff;
 	line-height: 24px;
 	text-align: center;
-	transition: all 0.2s;
-}
-
-.ban-left .menu-more .more-top li:hover{
-	opacity: 0.8;
-}
-
-.ban-left .menu-more .more-top li a{
-	color: #fff;
 }
 
 .ban-left .menu-more .more-btm{
 	width: 800px;
-	height: auto;
-	float: left;
 	/*height: 300px;*/
 	margin-top: 10px;
 	margin-left: 20px;
 	/*background: yellowgreen;*/
 }
 
-.ban-left .menu-more .more-btm .btm-con a:hover{
-	color: #E32F2F;
-}
+/*.ban-left .menu-more .more-btm .three{
+	height: 54px;
+}*/
 
 .ban-left .menu-more .more-btm li{
-	/*height: 18px;*/
-	display: block;
-	float: left;
-	width: 800px;
+	height: 18px;
 	line-height: 18px;
-	margin: 6px 0;
+	margin: 14px 0 14px 0;
+	padding: 0;
+	/*float: left;*/
 }
 
 .ban-left .menu-more .more-btm .two-line{
-	/*height: 36px;*/
+	height: 36px;
 }
 
 .ban-left .menu-more .more-btm li .btm-title{
 	width: 72px;
 	height: 18px;
 	line-height: 18px;
-	font-size: 12px;
+	font-size: 14px;
 	font-weight: bold;
 	text-align: right;
 	padding-right: 5px;
@@ -146,7 +126,6 @@
 .ban-left .menu-more .more-btm li .btm-con{
 	float: left;
 	line-height: 18px;
-	padding-left: 2px;
 	font-size: 0;
 }
 
@@ -156,73 +135,22 @@
 	font-size: 0;
 }
 
-.ban-left .menu-more .more-btm li .btm-con .con2{
-	margin-top: 7px;
-}
-
-.ban-left .menu-more .more-btm li .btm-con a{
-	float: left;
-	display: block;
-	font-size: 12px;
-	line-height: 18px;
-	color: #666666;
-}
-
-.ban-left .menu-more .more-btm li .btm-con span{
+.ban-left .menu-more .more-btm li .btm-con a, .ban-left .menu-more .more-btm li .btm-con span{
 	float: left;
 	display: block;
 	font-size: 14px;
 	line-height: 18px;
-	color: #e0e0e0;
+	color: #666666;
 }
 
 .ban-left .menu-more .more-btm li .left-sep{
 	margin-right: 10px;
+	color: #e0e0e0;
 }
 
 .ban-left .menu-more .more-btm li .separate{
 	margin: 0 10px;
-}
-
-.ban-left .menu-more .more-right{
-	position: absolute;
-	top: 20px;
-	left: 820px;
-	width: 180px;
-	height: 424px;
-	/*background: #008000;*/
-	float: left;
-}
-
-.ban-left .menu-more .more-right .business{
-	margin: 0 auto;
-	width: 168px;
-	height: 144px;
-	/*background: #7FFFD4;*/
-}
-
-.ban-left .menu-more .more-right .business a{
-	display: block;
-	float: left;
-	width: 83px;
-	height: 35px;
-	line-height: 0;
-	margin: 0 1px 1px 0;
-	/*background: black;*/
-}
-
-.ban-left .menu-more .more-right .more-ad{
-	margin: 10px auto 0;
-	width: 168px;
-	height: 269px;
-	line-height: 0;
-	/*background: #BEA68D;*/
-}
-
-.ban-left .menu-more .more-right .more-ad a{
-	display: block;
-	float: left;
-	margin-bottom: 1px;
+	color: #E0E0E0;
 }
 
 .ban-left ul li .menu-link{
