--- a/css/head.css
+++ b/css/head.css
@@ -58,7 +58,7 @@
 	top: 0;
 	padding: 4px 44px 4px 4px;
 	width: 450px;
-	border: 1px solid;
+	border: 1px solid transparent;
 	line-height: 25px;
 	font-size: 14px;
 	color: #989898;
