--- a/css/mi.css
+++ b/css/mi.css
@@ -81,6 +81,10 @@
 	display: block;
 }
 
+.mi-left .item-img:hover{
+	opacity: 0.8;
+}
+
 .mi-left .item-img{
 	width: 100%;
 	height: 250px;
@@ -155,6 +159,10 @@
 	display: block;
 }
 
+.mi-mid .item-img:hover{
+	opacity: 0.8;
+}
+
 .mi-mid .item-img{
 	width: 110px;
 	height: 110px;
@@ -199,6 +207,10 @@
 	height: 100%;
 }
 
+.mi-right .con1 .item-img:hover{
+	opacity: 0.8;
+}
+
 .mi-right .con1 .item-img{
 	width: 100%;
 	height: 100%;
@@ -215,6 +227,10 @@
 	width: 110px;
 	height: 110px;
 	margin: 0 5px;
+}
+
+.mi-right .con2 .item-img:hover{
+	opacity: 0.8;
 }
 
 .mi-right .con2 .item-img{
