--- a/css/banner.css
+++ b/css/banner.css
@@ -66,7 +66,7 @@
 	display: none;
 	left: 192px;
 	top: 0px;
-	z-index: 10;
+	z-index: 200;
 	width: 1000px;
 	height: 480px;
 	background: #fff;
@@ -244,14 +244,133 @@
 	width: 590px;
 	height: 480px;
 	margin-right: 10px;
+	padding-top: 10px;
+	position: relative;
 	/*background: aqua;*/
 }
 
-.ban-cast .pic{
+.ban-cast .slide-left, .ban-cast .slide-right{
+    position: absolute;
+    top: 50%;
+    z-index: 100;
+    cursor: pointer;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 41px;
+    height: 69px;
+    background: greenyellow;
+}
+
+.ban-cast .slide-left{
+    left: 0;
+    background: url("../img/slide-left-right.png") no-repeat -84px 50%;
+}
+
+.ban-cast .slide-left:hover{
+    background: url("../img/slide-left-right.png") no-repeat 0 50%;
+}
+
+.ban-cast .slide-right{
+    right: 0;
+    background: url("../img/slide-left-right.png") no-repeat -125px 50%;
+}
+
+.ban-cast .slide-right:hover{
+    background: url("../img/slide-left-right.png") no-repeat -41px 50%;
+}
+
+.ban-cast .circle-box{
+    position: absolute;
+    left: 40px;
+    bottom: 20px;
+    z-index: 100;
+    /*width: 400px;*/
+    /*height: 100px;*/
+    text-align: right;
+    /*background: red;*/
+   display: flex;
+   align-items: center;
+}
+
+.ban-cast .circle{
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    margin: 0 5px;
+    cursor: pointer;
+    border-radius: 50%;
+    box-sizing: initial;
+    /*background: rgba(255, 255, 255, .4);*/
+   	background: transparent;
+    border: 2px solid #b9beba;
+    border-color: hsla(0,0%,100%,.4);
+}
+
+.ban-cast .circle:hover{
+	background: rgba(255, 255, 255, .4);
+    /*border-color: rgba(0, 0, 0, .4);*/
+}
+
+.ban-cast .circle-box .active{
+    background: rgba(255, 255, 255, 1);
+    /*border: 4px solid rgba(0,0,0, .01);*/
+    border-bottom-color: hsla(0,0%,100%,.2);
+    /*border-color: rgba(0, 0, 0, .4);*/
+}
+
+.ban-cast .slide-list{
+    position: relative;
+    height: 460px;
+    width: auto;
+}
+
+.ban-cast .slide-item{
+    position: absolute;
+    top: 0;
+    left: 0;
+    float: left;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    /*display: none;*/
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: 100px;
+    /*padding-left: 300px;*/
+}
+
+.ban-cast .slide-list .active{
+    display: block;
+    opacity: 1;
+    z-index: 10;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.ban-cast .pic{
 	width: 590px;
 	margin-top: 10px;
 	overflow: hidden;
-}
+}*/
 
 
 /*ban-pic*/
