--- a/css/spike.css
+++ b/css/spike.css
@@ -114,7 +114,7 @@
 	display: block;
 	/*float: left;*/
 	width: 190px;
-	height: 100%;
+	/*height: 100%;*/
 	margin: auto;
 	text-align: center;
 }
