--- a/css/box1.css
+++ b/css/box1.css
@@ -69,6 +69,14 @@
 }
 
 .box1-left .box-con .tab div:first-child a{
+	/*color: #e33333;*/
+}
+
+.box1-left .box-con .tab .tab-link{
+	display: block;
+}
+
+.box1-left .box-con .tab .active{
 	color: #e33333;
 }
 
@@ -77,11 +85,65 @@
 }
 
 .box1-left .box-con .con{
+	height: 321px;
+	overflow: hidden;
+	position: relative;
+}
+
+.box1-left .box-con .tab-switch{
+	position: absolute;
+	left: 0;
+	width: 100%;
+	/*display: none;*/
+	opacity: 0;
+}
+
+.box1-left .box-con .switch-active{
+	display: block;
+	z-index: 100;
+	opacity: 1;
+}
+
+
+.box1-left .box-con .move-box{
+	position: absolute;
+	width: 400%;
+	height: 100%;
+	left: -350px;
+}
+
+.box1-left .box-con .move-item{
+	float: left;
+	width: calc(100% / 4);
+	height: 100%;
+}
+
+.box1-left .box-con .move-btn{
+	display: none;
+}
+
+.box1-left .box-con .circle-box .active{
+	background: #eb3436;
+}
+
+.box1-right .box-con .move-btn{
+	display: none;
+}
+
+.box1-right .box-con .circle-box .active{
+	background: #eb3436;
+}
+
+
+
+
+
+.box1-left .box-con .con{
 	margin: 0 20px;
 	position: relative;
 }
 
-.box1-left .box-con .con-in::after{
+.box1-left .box-con .con::after{
 	content: "";
 	width: 100%;
 	height: 1px;
@@ -320,9 +382,35 @@
 	margin-right: 0;
 }
 
+.box1-right .box-con{
+	position: relative;
+}
+
+.box1-right .box-con .con-con{
+	position: relative;
+	overflow: hidden;
+	height: 365px;
+}
+
+.box1-right .box-con .move-box{
+	width: 400%;
+	height: 100%;
+	position: relative;
+	left: -350px;
+}
+
+
+
+
+
+
+
+
 .box1-right .box-con .con{
 	position: relative;
+	overflow: hidden;
 	padding: 0 20px;
+	height: 365px;
 }
 
 .box1-right .box-con .con-in{
@@ -459,7 +547,7 @@
 	/*background: green;*/
 	position: absolute;
 	left: 50%;
-	bottom: -26px;
+	/*bottom: -26px;*/
 	margin-left: -14px;
 	
 }
