--- a/css/spike.css
+++ b/css/spike.css
@@ -64,6 +64,7 @@
 }
 
 .spike .spike-left .countdown>div{
+	position: relative;
 	float: left;
 	width: 40px;
 	height: 40px;
@@ -73,9 +74,23 @@
 	margin-right: 5px;
 }
 
+.spike .spike-left .countdown>div::before{
+	content: "";
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 50%;
+	z-index: 0;
+	width: 100%;
+	height: 1px;
+	background: #E83632;
+}
+
 .spike .spike-left .countdown div span{
 	font-size: 20px;
 	font-weight: bold;
+	position: relative;
+	z-index: 1;
 }
 
 .spike .spike-right{
